@@ -2255,6 +2255,9 @@ int main(int argc, char *argv[])
 		printf(term_quit());
 		exit(1);
 	}
+
+	dnsmgr_start_refresh();
+
 #if 0
 	/* This should no longer be necessary */
 	/* sync cust config and reload some internals in case a custom config handler binded to them */
