@@ -1,5 +1,8 @@
 2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>
 
+	* asterisk.c (main): force a dnsmgr background refresh after all other modules are initialized (issue #5599)
+	* dnsmgr.c: add ability to start a background refresh on demand (issue #5599)
+
 	* apps/app_dial.c (HANDLE_CAUSE): set CDR disposition to match cause code (issue #5602)
 
 	* asterisk.c: support 'runuser' and 'rungroup' options in asterisk.conf (issue #5621)
